--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,13 @@ on:
     push:
         branches: [main]
 
+permissions:
+    contents: read
+    actions: read
+    security-events: write
+    pull-requests: write
+    checks: write
+
 env:
     DOTNET_SKIP_FIRST_TIME_EXPERIENCE: 1
     DOTNET_NOLOGO: true
@@ -148,7 +155,7 @@ jobs:
                   dotnet-sonarscanner begin \
                     /k:"hrs-org_hiking-rental-store-api" \
                     /o:"hrs-org" \
-                    /d:sonar.token="${{ secrets.SONARQUBE_TOKEN }}" \
+                    /d:sonar.token="$SONAR_TOKEN" \
                     /d:sonar.host.url="https://sonarcloud.io" \
                     /d:sonar.cs.opencover.reportsPaths="**/coverage.opencover.xml" \
                     /d:sonar.cs.vstest.reportsPaths="**/TestResults.trx"
@@ -163,7 +170,7 @@ jobs:
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
                   SONAR_TOKEN: ${{ secrets.SONARQUBE_TOKEN }}
-              run: dotnet-sonarscanner end /d:sonar.token="${{ secrets.SONARQUBE_TOKEN }}"
+              run: dotnet-sonarscanner end /d:sonar.token="$SONAR_TOKEN"
 
     security-scan:
         name: Security Scan
