--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -306,19 +306,37 @@ jobs:
                   echo "Final coverage directory:"
                   ls -la ./coverage/
 
+            - name: Verify coverage for SonarCloud
+              run: |
+                  echo "=== Verifying coverage file for SonarCloud ==="
+
+                  if [ -f "./coverage/coverage-global.xml" ]; then
+                    echo "✅ Coverage file exists: coverage-global.xml"
+                    echo "File size: $(stat -c%s ./coverage/coverage-global.xml) bytes"
+                    echo "First 20 lines of coverage file:"
+                    head -20 ./coverage/coverage-global.xml
+                    echo ""
+                    echo "Coverage summary from file:"
+                    grep -E "line-rate|branch-rate" ./coverage/coverage-global.xml | head -1
+                  else
+                    echo "❌ Coverage file missing!"
+                    exit 1
+                  fi
+
             - name: Begin SonarCloud analysis
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
                   SONAR_TOKEN: ${{ secrets.SONARQUBE_TOKEN }}
               run: |
-                  # Enable coverage with proper file paths
+                  # Enable coverage with the generated coverage file
                   dotnet-sonarscanner begin \
                     /k:"hrs-org_hiking-rental-store-api" \
                     /o:"hrs-org" \
                     /d:sonar.token="$SONAR_TOKEN" \
                     /d:sonar.host.url="https://sonarcloud.io" \
                     /d:sonar.cs.vstest.reportsPaths="coverage/TestResults.trx,coverage/TestResults-alt.trx" \
-                    /d:sonar.cs.opencover.reportsPaths="coverage/*.xml" \
+                    /d:sonar.cs.opencover.reportsPaths="coverage/coverage-global.xml" \
+                    /d:sonar.coverageReportPaths="coverage/coverage-global.xml" \
                     /d:sonar.coverage.exclusions="**/*.Tests/**,**/Tests/**,**/*Test*/**" \
                     /d:sonar.verbose=true
 
