--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -335,8 +335,7 @@ jobs:
                     /d:sonar.token="$SONAR_TOKEN" \
                     /d:sonar.host.url="https://sonarcloud.io" \
                     /d:sonar.cs.vstest.reportsPaths="coverage/TestResults.trx,coverage/TestResults-alt.trx" \
-                    /d:sonar.cs.opencover.reportsPaths="coverage/coverage-global.xml" \
-                    /d:sonar.coverageReportPaths="coverage/coverage-global.xml" \
+                    /d:sonar.cs.cobertura.reportsPaths="coverage/coverage-global.xml" \
                     /d:sonar.coverage.exclusions="**/*.Tests/**,**/Tests/**,**/*Test*/**" \
                     /d:sonar.verbose=true
 
