--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,7 +54,9 @@ jobs:
                   name: build-artifacts
                   path: |
                       **/bin/Release/**
-                      **/obj/Release/**
+                      **/obj/**
+                      **/*.csproj
+                      **/*.sln
                   retention-days: 1
 
     test:
@@ -162,6 +164,11 @@ jobs:
         steps:
             - name: Checkout code
               uses: actions/checkout@v4
+
+            - name: Setup .NET
+              uses: actions/setup-dotnet@v4
+              with:
+                  global-json-file: global.json
 
             - name: Download build artifacts
               uses: actions/download-artifact@v4
