--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -69,6 +69,11 @@ jobs:
             - name: Checkout code
               uses: actions/checkout@v4
 
+            - name: Setup .NET
+              uses: actions/setup-dotnet@v4
+              with:
+                  global-json-file: global.json
+
             - name: Download build artifacts
               uses: actions/download-artifact@v4
               with:
@@ -187,6 +192,11 @@ jobs:
         steps:
             - name: Checkout code
               uses: actions/checkout@v4
+
+            - name: Setup .NET
+              uses: actions/setup-dotnet@v4
+              with:
+                  global-json-file: global.json
 
             - name: Download build artifacts
               uses: actions/download-artifact@v4
