Fix sonar security error

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,3 +1,13 @@
+# Sensitive files
+.env
+.env.*
+appsettings.Development.json
+appsettings.Local.json
+*.pfx
+*.p12
+*.key
+*.pem
+
 # .NET build artifacts
 **/bin/
 **/obj/
