--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -224,22 +224,24 @@ jobs:
                   name: build-artifacts
 
             - name: Set up Docker Buildx
-              uses: docker/setup-buildx-action@v3
+              uses: docker/setup-buildx-action@f95db51fddba0c2d1ec667646a06c2ce06100226 # v3.0.0
 
             - name: Log in to Docker Hub
-              uses: docker/login-action@v3
+              uses: docker/login-action@e92390c5fb421da1463c202d546fed0ec5c39f20 # v3.1.0
               with:
                   username: ${{ secrets.DOCKER_USERNAME }}
                   password: ${{ secrets.DOCKER_PASSWORD }}
 
             - name: Build and push Docker image
-              uses: docker/build-push-action@v5
+              uses: docker/build-push-action@2cdde995de11925a030ce8070c3d77a52ffcf1c0 # v5.3.0
+              env:
+                  DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
               with:
                   context: .
                   push: true
                   tags: |
-                      ${{ secrets.DOCKER_USERNAME }}/hrs-api:develop
-                      ${{ secrets.DOCKER_USERNAME }}/hrs-api:${{ github.sha }}
+                      ${{ env.DOCKER_USERNAME }}/hrs-api:develop
+                      ${{ env.DOCKER_USERNAME }}/hrs-api:${{ github.sha }}
                   cache-from: type=gha
                   cache-to: type=gha,mode=max
 
@@ -255,15 +257,21 @@ jobs:
               uses: actions/checkout@v4
 
             - name: Pull and run Docker image
+              env:
+                  DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+                  CONNECTION_STRING: ${{ secrets.CONNECTION_STRING }}
+                  JWT_KEY: ${{ secrets.JWT_KEY }}
+                  JWT_ISSUER: ${{ secrets.JWT_ISSUER }}
+                  JWT_AUDIENCE: ${{ secrets.JWT_AUDIENCE }}
               run: |
-                  docker pull ${{ secrets.DOCKER_USERNAME }}/hrs-api:${{ github.sha }}
+                  docker pull $DOCKER_USERNAME/hrs-api:${{ github.sha }}
                   docker run -d -p 5000:8080 --name hrs-api \
                     -e ASPNETCORE_ENVIRONMENT=Staging \
-                    -e ConnectionStrings__DefaultConnection="${{ secrets.CONNECTION_STRING }}" \
-                    -e Jwt__Key="${{ secrets.JWT_KEY }}" \
-                    -e Jwt__Issuer="${{ secrets.JWT_ISSUER }}" \
-                    -e Jwt__Audience="${{ secrets.JWT_AUDIENCE }}" \
-                    ${{ secrets.DOCKER_USERNAME }}/hrs-api:${{ github.sha }}
+                    -e ConnectionStrings__DefaultConnection="$CONNECTION_STRING" \
+                    -e Jwt__Key="$JWT_KEY" \
+                    -e Jwt__Issuer="$JWT_ISSUER" \
+                    -e Jwt__Audience="$JWT_AUDIENCE" \
+                    $DOCKER_USERNAME/hrs-api:${{ github.sha }}
                   sleep 30
 
             - name: OWASP ZAP Baseline Scan
@@ -280,13 +288,15 @@ jobs:
         runs-on: ubuntu-latest
         if: github.event_name == 'release'
         environment: production
+        env:
+            DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
 
         steps:
             - name: Checkout code
               uses: actions/checkout@v4
 
             - name: Log in to Docker Hub
-              uses: docker/login-action@v3
+              uses: docker/login-action@e92390c5fb421da1463c202d546fed0ec5c39f20 # v3.1.0
               with:
                   username: ${{ secrets.DOCKER_USERNAME }}
                   password: ${{ secrets.DOCKER_PASSWORD }}
@@ -302,15 +312,15 @@ jobs:
             - name: Re-tag existing image for production
               run: |
                   # Pull the exact image that was built from this commit SHA
-                  docker pull ${{ secrets.DOCKER_USERNAME }}/hrs-api:${{ steps.commit.outputs.SHA }}
+                  docker pull ${{ env.DOCKER_USERNAME }}/hrs-api:${{ steps.commit.outputs.SHA }}
 
                   # Re-tag it for production
-                  docker tag ${{ secrets.DOCKER_USERNAME }}/hrs-api:${{ steps.commit.outputs.SHA }} ${{ secrets.DOCKER_USERNAME }}/hrs-api:latest
-                  docker tag ${{ secrets.DOCKER_USERNAME }}/hrs-api:${{ steps.commit.outputs.SHA }} ${{ secrets.DOCKER_USERNAME }}/hrs-api:${{ steps.version.outputs.VERSION }}
+                  docker tag ${{ env.DOCKER_USERNAME }}/hrs-api:${{ steps.commit.outputs.SHA }} ${{ env.DOCKER_USERNAME }}/hrs-api:latest
+                  docker tag ${{ env.DOCKER_USERNAME }}/hrs-api:${{ steps.commit.outputs.SHA }} ${{ env.DOCKER_USERNAME }}/hrs-api:${{ steps.version.outputs.VERSION }}
 
                   # Push the new tags
-                  docker push ${{ secrets.DOCKER_USERNAME }}/hrs-api:latest
-                  docker push ${{ secrets.DOCKER_USERNAME }}/hrs-api:${{ steps.version.outputs.VERSION }}
+                  docker push ${{ env.DOCKER_USERNAME }}/hrs-api:latest
+                  docker push ${{ env.DOCKER_USERNAME }}/hrs-api:${{ steps.version.outputs.VERSION }}
 
             - name: Production release summary
               run: |
