--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -145,7 +145,7 @@ jobs:
                   path: ./coverage
 
             - name: Install XML tools
-              run: sudo apt-get install -y libxml2-utils
+              run: sudo apt-get update && sudo apt-get install -y libxml2-utils
 
             - name: Debug coverage files
               run: |
