[HRS-12] modify register to use repository (#4)
* [HRS-12] modify register to use repository

* [HRS-12] add Register Tests

* [HRS-12] edit Userservice

* [HRS-12] modify ci

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -203,7 +203,7 @@ jobs:
                     /d:sonar.exclusions="**/bin/**,**/obj/**,**/Migrations/**,**/HRS.Migrations/**" \
                     /d:sonar.test.exclusions="**/bin/**,**/obj/**,**/HRS.Migrations/**" \
                     /d:sonar.scm.disabled=true \
-                    /d:sonar.qualitygate.wait=true \
+                    /d:sonar.qualitygate.wait=false \
                     /d:sonar.verbose=true \
                     $SONAR_PARAMS
 
